--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,9 @@
+{% load static %}
+<head>
+    <title>Polls</title>
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+</head>
+
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
